# ser

./: .gitignore  CNN_model.json  README.md  encoder.py  extract_features.py  main.py  model.py  pyproject.toml  requirements.txt  setup.py
ser/: __init__.py
